--- a/introPython/temp.ipynb
+++ b/introPython/temp.ipynb
@@ -49,29 +49,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "9\n",
-      "8\n",
-      "7\n",
-      "6\n",
-      "5\n",
-      "4\n",
-      "3\n",
-      "2\n",
-      "1\n"
+      "10 same\n",
+      "8 same\n",
+      "6 same\n",
+      "4 same\n",
+      "2 same\n"
      ]
     }
    ],
    "source": [
     "for i in range(10, 0, -1) :\n",
-    "    print(i)"
+    "    \n",
+    "    \n",
+    "    for n in range(10, 0, -2) : \n",
+    "        if i == n : \n",
+    "            print(i, \"same\")\n",
+    "     \n",
+    "            "
    ]
   },
   {
@@ -280,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
